<resources>
    <string name="app_name">Marvel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_login">Welcome to the Marvel HQ\'s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create account</string>
    <string name="need_a_name">need a name</string>
    <string name="need_a_password">need a password</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="need_an_email">need an email</string>
    <string name="marvel">Marvel</string>

    <string name="lorenIpsun">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="thumbnail">thumbnail</string>
    <string name="published">Published:</string>
    <string name="price">Price: $</string>
    <string name="pages">Pages:</string>
    <string name="hq_s">Hq\'s</string>
</resources>