<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".login.view.SignupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/barHeight"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/arrowBack_signup"
            android:layout_width="@dimen/barHeight"
            android:layout_height="@dimen/barHeight"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/brightText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/register"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/marginMin"
            android:layout_marginEnd="@dimen/marginMin"
            android:textColor="@color/brightText"
            android:textSize="@dimen/barText"/>
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/paddinMed">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="@dimen/marginBottomWelcomeBox_Login"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="@dimen/boxRadius"
            app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/circleImagem"
            android:layout_height="@dimen/circleImagem"
            android:layout_marginBottom="@dimen/marginMed"
            android:background="@color/brightText"
            app:cardCornerRadius="60dp"
            app:layout_constraintBottom_toTopOf="@+id/materialCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/image_addPerson_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_add_person" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/boxRadius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/marginMin">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editText_name_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:boxBackgroundColor="@color/translucent"
                    app:hintTextColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editText_email_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:boxBackgroundColor="@color/translucent"
                    app:hintTextColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editText_password_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginMin"
                    android:layout_marginBottom="@dimen/marginMed"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:boxBackgroundColor="@color/translucent"
                    app:hintTextColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginMed"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:fontFamily="@font/roboto"
                    android:text="@string/save"
                    android:textAllCaps="true" />


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>