<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".hq.view.ComicDetailsFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".hq.view.ComicDetailsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/CollapsinTheme">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorPrimary"
                app:expandedTitleTextAppearance="@color/translucent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/img_tumbnail_comicDetails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margimLarge"
                    android:contentDescription="@string/thumbnail"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/tumbnail_test"
                    app:layout_collapseMode="parallax" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-180dp"
                app:cardCornerRadius="0dp"
                app:strokeColor="@color/brightText"
                app:strokeWidth="4dp">

                <ImageView
                    android:id="@+id/img_cover_comicDetails"
                    android:layout_width="@dimen/coverWidthPlus"
                    android:layout_height="@dimen/coverHeightPlus"
                    tools:src="@drawable/cover_test" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/toolbar_title_comicDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="@dimen/marginMin"
                android:layout_marginEnd="@dimen/marginMed"
                android:layout_marginBottom="@dimen/marginMin"
                android:fontFamily="@font/roboto"
                android:text="Amazin Spider-Man (2014) # 1 (Mhan Variant)"
                android:textAllCaps="true"
                android:textColor="@color/brightText"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_collapseMode="parallax" />


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginMin"
                android:layout_marginEnd="@dimen/marginMin"
                android:backgroundTint="@color/translucent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_summary_comicDetals"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:justificationMode="inter_word"
                        android:text="@string/lorenIpsun"
                        android:textColor="@color/offWhiteText"
                        android:textSize="@dimen/sumaryText" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginMed"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:fontFamily="@font/roboto"
                            android:text="@string/published"
                            android:textColor="@color/brightText"
                            android:textSize="@dimen/sumaryText" />

                        <TextView
                            android:id="@+id/txt_published_comicDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/marginMin"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:text="April 30, 2014"
                            android:textColor="@color/offWhiteText"
                            android:textSize="@dimen/sumaryText" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginMin"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:fontFamily="@font/roboto"
                            android:text="@string/price"
                            android:textColor="@color/brightText"
                            android:textSize="@dimen/sumaryText" />

                        <TextView
                            android:id="@+id/txt_price_comicDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/marginMin"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:text="5,99"
                            android:textColor="@color/offWhiteText"
                            android:textSize="@dimen/sumaryText" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginMin"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:fontFamily="@font/roboto"
                            android:text="@string/pages"
                            android:textColor="@color/brightText"
                            android:textSize="@dimen/sumaryText" />

                        <TextView
                            android:id="@+id/txt_totalPages_comicDetails"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/marginMin"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:text="38"
                            android:textColor="@color/offWhiteText"
                            android:textSize="@dimen/sumaryText" />


                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ImageView
        android:id="@+id/arrowBack_comicDetails"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/brightText" />


</androidx.constraintlayout.widget.ConstraintLayout>